Modify chooser controller to correctly handle removing item on Mac

This CL modified ChooserBubbleUiController and ChooserDialogCocoaController
to correctly handle removing item. And it also added and updated test code
to cover it.

BUG=619230

Review-Url: https://codereview.chromium.org/2054333002
Cr-Commit-Position: refs/heads/master@{#399494}

Former-commit-id: d5ca45e05f2000f644a0b092813d294bcdcc5cc4